Full fix for the comparision type coercion bug for GROOVY-155.
git-svn-id: http://svn.codehaus.org/groovy/trunk@704 a5544e8c-8a19-0410-ba12-f9af4593a198